hpa.yml
# MySQL Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: mysql
        image: mysql/mysql-server:8.0.23
        ports:
        - containerPort: 3306
        resources:
          requests:
            memory: "256Mi"    # A quantidade de memória que o Kubernetes garantirá
            cpu: "250m"         # A quantidade de CPU que o Kubernetes garantirá
          limits:
            memory: "512Mi"    # A quantidade máxima de memória que o pod pode consumir
            cpu: "500m"        # A quantidade máxima de CPU que o pod pode consumir

---

# MySQL Service
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: database
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  type: ClusterIP

---

# Web Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: demo/sre-challenge
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"    # A quantidade de memória que o Kubernetes garantirá
            cpu: "100m"         # A quantidade de CPU que o Kubernetes garantirá
          limits:
            memory: "256Mi"    # A quantidade máxima de memória que o pod pode consumir
            cpu: "250m"        # A quantidade máxima de CPU que o pod pode consumir

---

# Web Service
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort
